--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,14 @@
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.line-through {
+	text-decoration: line-through; 
+}
+
+.no-line-through {
+	text-decoration: none;
+}
+
 .show {
 	display: block;
 }
