--- a/src/App.css
+++ b/src/App.css
@@ -61,19 +61,7 @@
 }
 
 #button {
-	box-shadow: 0px 10px 14px -7px #276873;
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	background-color:#599bb3;
-	border-radius:8px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:4px 4px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #3d768a;
+	margin-left: 5px;
 }
 #button:hover {
 	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
