--- a/src/App.css
+++ b/src/App.css
@@ -76,13 +76,13 @@ li {
 	margin-bottom: 5px;
 }
 
-#editButton {
+#editButton, #submitButton {
 	margin-right: 10px;
 	position: absolute;
   	right: 30%;
 }
 
-#deleteButton {
+#deleteButton, #cancelButton {
 	margin-right: 5px;
 	position: absolute;
 	right: 25%;
