--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
   margin-left: 25%;
 	margin-right: 25%;
-	background: rgb(231,231,240);
-	background: -moz-linear-gradient(0deg, rgba(231,231,240,1) 81%, rgba(102,211,233,1) 100%);
-	background: -webkit-linear-gradient(0deg, rgba(231,231,240,1) 81%, rgba(102,211,233,1) 100%);
-	background: linear-gradient(0deg, rgba(231,231,240,1) 81%, rgba(102,211,233,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e7e7f0",endColorstr="#66d3e9",GradientType=1);
 }
 
 .title {
@@ -93,7 +88,7 @@ li {
 }
 
 .pageNumber {
-	vertical-align: text-top;
+	vertical-align: top;
 }
 
 #completeBtn {
