--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#forgotPassword {
+  cursor:pointer;
+  color:blue;
+  text-decoration:underline;
+  font-size: small
+}
+
+.main {
+  text-align: center;
+}
+
+.password, .ID {
+  font-size: xx-large
+}
+
+.registrationBody, .loginBody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
