--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,9 @@ code {
     flex-direction: column;
     align-items: center;
 }
+
+.passwords {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
