--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,12 @@ code {
     flex-direction: column;
     align-items: center;
 }
+
+.navButton {
+  padding: 14px 16px;
+}
+
+.header {
+  padding: 14px 16px;
+  background-color: deepskyblue;
+}
