--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,44 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 #forgotPassword {
-  cursor:pointer;
-  color:blue;
-  text-decoration:underline;
-  font-size: small
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+  font-size: small;
 }
 
 .main {
   text-align: center;
 }
 
-.password, .ID {
-  font-size: xx-large
+.password,
+.ID {
+  font-size: xx-large;
 }
 
-.registrationBody, .loginBody {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.registrationBody,
+.loginBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .passwords {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .navButton {
